--- a/js/gis/dijit/Identify/css/Identify.css
+++ b/js/gis/dijit/Identify/css/Identify.css
@@ -10,7 +10,8 @@
 	margin-top: 5px;
 }
 .esriPopup {
-   font-family:  Garamond,Calibri,Verdana, sans-serif;
+   //font-family:  Garamond,Calibri,Verdana, sans-serif;
+   font-family:  Verdana,Arial,helvetica;
    font-size: 12px;
 
 }
