--- a/js/gis/dijit/prcmin/css/prcmin.css
+++ b/js/gis/dijit/prcmin/css/prcmin.css
@@ -62,7 +62,8 @@
  
  
  .CSSTableGenerator {
- 	margin:0px;padding:0px;
+ 	margin:7px 0px 0px 0px;
+ 	padding:0px;
  	width:100%;
  	box-shadow: 10px 10px 5px #888888;
  	border:1px solid #15157f;
@@ -84,7 +85,7 @@
  	border-top-left-radius:0px; 
  	border-top-left-radius:0px;
  	
- 	background-image: radial-gradient(2px at 15px 50% , #000000 50%, rgba(0, 255, 0, 0.3) 8px, rgba(255, 0, 0, 0.3) 13px, rgba(0, 0, 255, 0.0) 17px);
+ 	//background-image: radial-gradient(2px at 15px 50% , #000000 50%, rgba(0, 255, 0, 0.3) 8px, rgba(255, 0, 0, 0.3) 13px, rgba(0, 0, 255, 0.0) 17px);
  }
  .CSSTableGenerator table tr:first-child td:last-child {
  	-moz-border-radius-topright:0px;
@@ -97,8 +98,24 @@
  }.CSSTableGenerator tr:hover td{
  	
  }
- .CSSTableGenerator tr:nth-child(odd){ background-color:#e7f9d4; }
- .CSSTableGenerator tr:nth-child(even)    { background-color:#ffffff; }.CSSTableGenerator td{
+ /*.CSSTableGenerator tr:nth-child(odd){ background-color:#e7f9d4; }
+ .CSSTableGenerator tr:nth-child(even)    { background-color:#ffffff; }
+ */
+  .CSSTableGenerator tr:nth-child(odd){
+      /* 
+      background-color:#e7f9d4; 
+      */ 
+       background-color:#ffffff;
+     
+  }
+  .CSSTableGenerator tr:nth-child(even)    { 
+      /*
+      background-color:#ffffff; 
+       background-color:#7696bc; 
+       */
+      background-color:#8dd6f9; 
+ }
+ .CSSTableGenerator td{
  	vertical-align:middle;
  	border:1px solid #15157f;
  	border-width:0px 1px 1px 0px;
@@ -117,14 +134,23 @@
  }
  
  .CSSTableGenerator tr:first-child td{
+ /*	
  	background:-o-linear-gradient(bottom, #3f7f00 5%, #ffffaa 100%);	
  	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3f7f00), color-stop(1, #ffffaa) );
  	background:-moz-linear-gradient( center top, #3f7f00 5%, #ffffaa 100% );
  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f7f00", endColorstr="#ffffaa");	
  	background: -o-linear-gradient(top,#3f7f00,ffffaa);
  	background-image: -ms-linear-gradient(top, #3f7f00 0%, #ffffaa 100%);
- 
- 	background-color:#3f7f00;
+  	background-color:#3f7f00;
+*/ 	
+ 	background:-o-linear-gradient(bottom, #8dd6f9 5%, #009081 100%);	
+ 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8dd6f9), color-stop(1, #009081) );
+ 	background:-moz-linear-gradient( center top, #8dd6f9 5%, #009081 100% );
+ 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#8dd6f9", endColorstr="#009081");	
+ 	background: -o-linear-gradient(top,#8dd6f9,#009081);
+ 	background-image: -ms-linear-gradient(top, #8dd6f9 0%, #009081 100%);
+  	background-color:#8dd6f9;	
+ 	
  	border:0px solid #15157f;
  	text-align:center;
  
@@ -136,11 +162,11 @@
  	color:#050404;
  }
  .CSSTableGenerator tr:first-child:hover td{
- 	background:-o-linear-gradient(bottom, #3f7f00 5%, #ffffaa 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3f7f00), color-stop(1, #ffffaa) );
- 	background:-moz-linear-gradient( center top, #3f7f00 5%, #ffffaa 100% );
- 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f7f00", endColorstr="#ffffaa");	background: -o-linear-gradient(top,#3f7f00,ffffaa);
+ 	background:-o-linear-gradient(bottom, #8dd6f9 5%, #69908d 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8dd6f9), color-stop(1, #69908d) );
+ 	background:-moz-linear-gradient( center top, #8dd6f9 5%, #69908d 100% );
+ 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#8dd6f9", endColorstr="#69908d");	background: -o-linear-gradient(top,#8dd6f9,ffffaa);
  
- 	background-color:#3f7f00;
+ 	background-color:#8dd6f9;
  }
  .CSSTableGenerator tr:first-child td:first-child{
  	
