--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+
+/*@import url(http://fonts.googleapis.com/css?family=Reenie+Beanie);*/
+
 body, html {
     width: 100%;
     height: 100%;
@@ -5,36 +8,63 @@ body, html {
     padding: 0;
     overflow: hidden;
     /*font-family: Tahoma;*/
-    //font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
+   // font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
     //font-family:  Futura,Broadway,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
    // font-family:  Garamond,Broadway,Helvetica Condensed, Frutiger, Avenir, Univers,Myriad,Sabon 
-    font-family:  Garamond,Calibri,Verdana, sans-serif;
-    font-size: 10px;
+   //font-family:  Garamond,Calibri,Verdana, sans-serif;
+    font-family:  Verdana,Arial,helvetica;
+    //font-family:  "Times New Roman", Times, serif;
+    // font-family:  "Courier New", Courier, monospace;
+    //font-family: 'Reenie Beanie', cursive;
+    font-size: 8px;
     line-height: 17px;
 }
 .appHeader {
     background: url("../images/linen.jpg") repeat-x scroll left top transparent;
-    height: 40px;
+    height: 38px;
     margin: 0;
     padding: 0;
     width: 100%;
+    border:  3px solid rgb(1,109,150); 
 }
 .appHeader .headerLogo {
     float: left;
     left: 30px;
     position: relative;
-    top: 8px;
+    top: 5px;
 }
 .appHeader .headerTitle {
     color: #FFFFFF;
     float: left;
-    font-size: 16pt;
+    font-size: 14pt;
     //font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
-    font-family:Garamond,Calibri,Verdana, sans-serif;
+    //font-family:Garamond,Calibri,Verdana, sans-serif;
     font-weight: bold;
     left: 60px;
-    top: 15px;
+    top: 10px;
     position: relative;
+    
+    //text-shadow: 0.1em 0.1em 0.2em green;
+   //text-shadow: 0 0 0.2em green, 0 0 0.2em green,0 0 0.2em green;  
+   //text-shadow: 0 0 0.2em rgba(141,214,219,0.5), 0 0 0.2em rgba(141,214,219,0.5),0 0 0.2em rgba(141,214,219,0.5);  
+   //text-shadow: 0px 2px 0.7em rgba(1,84,239,0.8), 0 0 1.2em rgba(1,14,39,0.5),0 0 0.2em rgba(1,114,139,0.5);
+   
+text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);   
+   
+   
+   
+   
 }
 .appHeader .subHeaderTitle {
     color: #CFCFCF;
@@ -54,16 +84,27 @@ body, html {
     top: 17px;
     right: 10px;
     text-align: right;
+ 
     //font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
-    font-family:Garamond,Calibri,Verdana, sans-serif;
-    font-size:11px;
+    //font-family:Garamond,Calibri,Verdana, sans-serif;
+    font-size:15px;
+    //text-shadow: 0.1em 0.1em 0.2em green;
+ // text-shadow: 0 0 0.2em green, 0 0 0.2em green,0 0 0.2em green;
+   //text-shadow: 0 0 0.7em rgba(1,114,139,0.2), 0 0 0.2em rgba(1,114,139,0.7),0 0 0.2em rgba(1,114,139,0.8);
 }
 .appHeader .headerLinks a {
     color: #FFFFFF;
+    text-decoration: none;
 }
+.appHeader .headerLinks a:hover {
+    color: rgba(1,84,239,0.8);
+    text-shadow: 0px 2px 0.7em rgba(1,84,239,0.8), 0 0 1.2em rgba(1,14,39,0.5),0 0 0.2em rgba(1,114,139,0.5);
+    text-decoration: none;
+}
+
 #borderContainerOuter {
     position: absolute;
-    top: 40px;
+    top: 44px;
     bottom: 0;
     left: 0;
     right: 0;
