--- a/js/gis/dijit/NavTools/css/NavTools.css
+++ b/js/gis/dijit/NavTools/css/NavTools.css
@@ -47,17 +47,20 @@
     /*border: 1px solid #bbb;*/
     //width: 100%;
     position: absolute;
-    top: 10px;
+    top: 15px;
     //left: 85%;
-    width: 145px;
+    width: 105px;
     float: right;
      padding: 2px;
     //margin: 70px 0px 0px 80px;
     margin: 4px 0px 0px 75px;
     z-index:999;
     //background: rgb(250,250,250);
-    background: rgb(90,90,90);
-    border:  1px solid rgb(150,150,50); 
+    //background: rgb(90,90,90);
+    //background: rgb(141,214,249);
+    //background: rgb(0,164,172);
+    background: rgb(118,154,132);
+    border:  1px solid rgb(1,109,138); 
     border-radius:  4px;
      /*
      display: block;
