--- a/js/gis/dijit/prc/css/prc.css
+++ b/js/gis/dijit/prc/css/prc.css
@@ -46,7 +46,9 @@
 }
         
 
-.jumplistheader  {font-weight: bold;text-align: left; background-color="#ADC8D9";}
+.jumplistheader  {
+  font-weight: bold;text-align: left; background-color="#ADC8D9";
+  }
 .jumplistvalue     {border-style: solid; border-color: "#15157f";}
 .jumplisttable {
     font-family: Arial, Helvetica, sans-serif; 
@@ -54,94 +56,121 @@
     width:300px;
  }
  
- .CSSTableGenerator {
- 	margin:0px;padding:0px;
- 	width:100%;
- 	box-shadow: 10px 10px 5px #888888;
- 	border:1px solid #15157f;
- 	
- 	-moz-border-radius-bottomleft:0px;
- 	-webkit-border-bottom-left-radius:0px;
- 	border-bottom-left-radius:0px;
- 	
- 	-moz-border-radius-bottomright:0px;
- 	-webkit-border-bottom-right-radius:0px;
- 	border-bottom-right-radius:0px;
- 	
- 	-moz-border-radius-topright:0px;
- 	-webkit-border-top-right-radius:0px;
- 	border-top-right-radius:0px;
- 	
- 	-moz-border-radius-topleft:0px;
- 	-webkit-border-top-left-radius:0px;
- 	border-top-left-radius:0px; 
- 	border-top-left-radius:0px;
- 	
- 	background-image: radial-gradient(2px at 15px 50% , #000000 50%, rgba(0, 255, 0, 0.3) 8px, rgba(255, 0, 0, 0.3) 13px, rgba(0, 0, 255, 0.0) 17px);
- }
- .CSSTableGenerator table tr:first-child td:last-child {
- 	-moz-border-radius-topright:0px;
- 	-webkit-border-top-right-radius:0px;
- 	border-top-right-radius:0px;
- }.CSSTableGenerator tr:last-child td:first-child{
- 	-moz-border-radius-bottomleft:0px;
- 	-webkit-border-bottom-left-radius:0px;
- 	border-bottom-left-radius:0px;
- }.CSSTableGenerator tr:hover td{
- 	
- }
- .CSSTableGenerator tr:nth-child(odd){ background-color:#e7f9d4; }
- .CSSTableGenerator tr:nth-child(even)    { background-color:#ffffff; }.CSSTableGenerator td{
- 	vertical-align:middle;
- 	border:1px solid #15157f;
- 	border-width:0px 1px 1px 0px;
- 	text-align:left;
- 	padding:0px;
- 	font-size:9px;
- 	font-family:Arial;
- 	font-weight:normal;
- 	color:#000000;
- }.CSSTableGenerator tr:last-child td{
- 	border-width:0px 1px 0px 0px;
- }.CSSTableGenerator tr td:last-child{
- 	border-width:0px 0px 1px 0px;
- }.CSSTableGenerator tr:last-child td:last-child{
- 	border-width:0px 0px 0px 0px;
- }
  
- .CSSTableGenerator tr:first-child td{
- 	//background:-o-linear-gradient(bottom, #3f7f00 5%, #ffffaa 100%);	
- 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.5, #3f7f00), color-stop(1, #ffffaa) );
- 	background:-moz-linear-gradient( center top, #3f7f00 5%, #ffffaa 100% );
- 	background: -o-linear-gradient(top,#3f7f00,ffffaa);
- 	background-image: -ms-linear-gradient(top, #3f7f00 0%, #ffffaa 100%);
- 	//filter:progid:DXImageTransform.Microsoft.Gradient(startColorstr="#3f7f00", endColorstr="#ffffaa");	
- 	//background-color:#3f7f00;
- 	border:5px solid #15157f;
- 	text-align:center;
- 
- 	/*border-width:0px 0px 1px 1px;*/
- 	border-width:0px 0px 0px 0px;
- 	font-size:10px;
- 	font-family:Arial;
- 	font-weight:bold;
- 	color:#050404;
+  .CSSTableGenerator {
+  	margin:7px 0px 0px 0px;
+  	padding:0px;
+  	width:100%;
+  	box-shadow: 10px 10px 5px #888888;
+  	border:1px solid #15157f;
+  	
+  	-moz-border-radius-bottomleft:0px;
+  	-webkit-border-bottom-left-radius:0px;
+  	border-bottom-left-radius:0px;
+  	
+  	-moz-border-radius-bottomright:0px;
+  	-webkit-border-bottom-right-radius:0px;
+  	border-bottom-right-radius:0px;
+  	
+  	-moz-border-radius-topright:0px;
+  	-webkit-border-top-right-radius:0px;
+  	border-top-right-radius:0px;
+  	
+  	-moz-border-radius-topleft:0px;
+  	-webkit-border-top-left-radius:0px;
+  	border-top-left-radius:0px; 
+  	border-top-left-radius:0px;
+  	
+  	//background-image: radial-gradient(2px at 15px 50% , #000000 50%, rgba(0, 255, 0, 0.3) 8px, rgba(255, 0, 0, 0.3) 13px, rgba(0, 0, 255, 0.0) 17px);
+  }
+  .CSSTableGenerator table tr:first-child td:last-child {
+  	-moz-border-radius-topright:0px;
+  	-webkit-border-top-right-radius:0px;
+  	border-top-right-radius:0px;
+  }.CSSTableGenerator tr:last-child td:first-child{
+  	-moz-border-radius-bottomleft:0px;
+  	-webkit-border-bottom-left-radius:0px;
+  	border-bottom-left-radius:0px;
+  }.CSSTableGenerator tr:hover td{
+  	
+  }
+  /*.CSSTableGenerator tr:nth-child(odd){ background-color:#e7f9d4; }
+  .CSSTableGenerator tr:nth-child(even)    { background-color:#ffffff; }
+  */
+   .CSSTableGenerator tr:nth-child(odd){
+       /* 
+       background-color:#e7f9d4; 
+       */ 
+        background-color:#ffffff;
+      
+   }
+   .CSSTableGenerator tr:nth-child(even)    { 
+       /*
+       background-color:#ffffff; 
+        background-color:#7696bc; 
+        */
+       background-color:#8dd6f9; 
+  }
+  .CSSTableGenerator td{
+  	vertical-align:middle;
+  	border:1px solid #15157f;
+  	border-width:0px 1px 1px 0px;
+  	text-align:left;
+  	padding:0px;
+  	font-size:9px;
+  	font-family:Arial;
+  	font-weight:normal;
+  	color:#000000;
+  }.CSSTableGenerator tr:last-child td{
+  	border-width:0px 1px 0px 0px;
+  }.CSSTableGenerator tr td:last-child{
+  	border-width:0px 0px 1px 0px;
+  }.CSSTableGenerator tr:last-child td:last-child{
+  	border-width:0px 0px 0px 0px;
+  }
+  
+  .CSSTableGenerator tr:first-child td{
+  /*	
+  	background:-o-linear-gradient(bottom, #3f7f00 5%, #ffffaa 100%);	
+  	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3f7f00), color-stop(1, #ffffaa) );
+  	background:-moz-linear-gradient( center top, #3f7f00 5%, #ffffaa 100% );
+  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f7f00", endColorstr="#ffffaa");	
+  	background: -o-linear-gradient(top,#3f7f00,ffffaa);
+  	background-image: -ms-linear-gradient(top, #3f7f00 0%, #ffffaa 100%);
+   	background-color:#3f7f00;
+ */ 	
+  	background:-o-linear-gradient(bottom, #8dd6f9 5%, #009081 100%);	
+  	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8dd6f9), color-stop(1, #009081) );
+  	background:-moz-linear-gradient( center top, #8dd6f9 5%, #009081 100% );
+  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#8dd6f9", endColorstr="#009081");	
+  	background: -o-linear-gradient(top,#8dd6f9,#009081);
+  	background-image: -ms-linear-gradient(top, #8dd6f9 0%, #009081 100%);
+   	background-color:#8dd6f9;	
+  	
+  	border:0px solid #15157f;
+  	text-align:center;
+  
+  	/*border-width:0px 0px 1px 1px;*/
+  	border-width:0px 0px 0px 0px;
+  	font-size:10px;
+  	font-family:Arial;
+  	font-weight:bold;
+  	color:#050404;
+  }
+  .CSSTableGenerator tr:first-child:hover td{
+  	background:-o-linear-gradient(bottom, #8dd6f9 5%, #009081 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8dd6f9), color-stop(1, #009081) );
+  	background:-moz-linear-gradient( center top, #8dd6f9 5%, #009081 100% );
+  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#8dd6f9", endColorstr="#009081");	background: -o-linear-gradient(top,#8dd6f9,ffffaa);
+  
+  	background-color:#8dd6f9;
+  }
+  .CSSTableGenerator tr:first-child td:first-child{
+  	
+  	/* border-width:0px 0px 1px 0px; */
+  	 border-width:0px 0px 0px 0px; 
+  }
+  .CSSTableGenerator tr:first-child td:last-child{
+  	/*border-width:0px 0px 1px 1px;*/
+          border-width:0px 0px 0px 0px;	
  }
- 
- .CSSTableGenerator tr:first-child:hover td{
- 	background:-o-linear-gradient(bottom, #3f7f00 5%, #ffffaa 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3f7f00), color-stop(1, #ffffaa) );
- 	background:-moz-linear-gradient( center top, #3f7f00 5%, #ffffaa 100% );
- 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f7f00", endColorstr="#ffffaa");	background: -o-linear-gradient(top,#3f7f00,ffffaa);
- 
- 	background-color:#3f7f00;
- }
- .CSSTableGenerator tr:first-child td:first-child{
- 	
- 	/* border-width:0px 0px 1px 0px; */
- 	 border-width:0px 0px 0px 0px; 
- }
- .CSSTableGenerator tr:first-child td:last-child{
- 	/*border-width:0px 0px 1px 1px;*/
-         border-width:0px 0px 0px 0px;	
-}
  
