--- a/js/gis/dijit/prc/css/prc.css
+++ b/js/gis/dijit/prc/css/prc.css
@@ -138,7 +138,8 @@
   	background: -o-linear-gradient(top,#3f7f00,ffffaa);
   	background-image: -ms-linear-gradient(top, #3f7f00 0%, #ffffaa 100%);
    	background-color:#3f7f00;
- */ 	
+ */ 
+ /*
   	background:-o-linear-gradient(bottom, #8dd6f9 5%, #009081 100%);	
   	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8dd6f9), color-stop(1, #009081) );
   	background:-moz-linear-gradient( center top, #8dd6f9 5%, #009081 100% );
@@ -146,6 +147,14 @@
   	background: -o-linear-gradient(top,#8dd6f9,#009081);
   	background-image: -ms-linear-gradient(top, #8dd6f9 0%, #009081 100%);
    	background-color:#8dd6f9;	
+ */ 	
+   	background:-o-linear-gradient(bottom, #8dd6f9 5%, #69908d 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8dd6f9), color-stop(1, #69908d) );
+  	background:-moz-linear-gradient( center top, #8dd6f9 5%, #69908d 100% );
+  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#8dd6f9", endColorstr="#69908d");	background: -o-linear-gradient(top,#8dd6f9,ffffaa);
+  
+  	background-color:#8dd6f9;	
+  	
+  	
   	
   	border:0px solid #15157f;
   	text-align:center;
@@ -158,12 +167,21 @@
   	color:#050404;
   }
   .CSSTableGenerator tr:first-child:hover td{
-  	background:-o-linear-gradient(bottom, #8dd6f9 5%, #009081 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8dd6f9), color-stop(1, #009081) );
-  	background:-moz-linear-gradient( center top, #8dd6f9 5%, #009081 100% );
-  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#8dd6f9", endColorstr="#009081");	background: -o-linear-gradient(top,#8dd6f9,ffffaa);
+  	/*
+  	background:-o-linear-gradient(bottom, #8dd6f9 5%, #69908d 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8dd6f9), color-stop(1, #69908d) );
+  	background:-moz-linear-gradient( center top, #8dd6f9 5%, #69908d 100% );
+  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#8dd6f9", endColorstr="#69908d");	background: -o-linear-gradient(top,#8dd6f9,ffffaa);
   
   	background-color:#8dd6f9;
-  }
+  	*/
+  	background:-o-linear-gradient(bottom, #8dd6f9 5%, #009081 100%);	
+  	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8dd6f9), color-stop(1, #009081) );
+  	background:-moz-linear-gradient( center top, #8dd6f9 5%, #009081 100% );
+  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#8dd6f9", endColorstr="#009081");	
+  	background: -o-linear-gradient(top,#8dd6f9,#009081);
+  	background-image: -ms-linear-gradient(top, #8dd6f9 0%, #009081 100%);
+   	background-color:#8dd6f9; 	
+ }
   .CSSTableGenerator tr:first-child td:first-child{
   	
   	/* border-width:0px 0px 1px 0px; */
