--- a/js/gis/dijit/NavTools/css/NavTools.css
+++ b/js/gis/dijit/NavTools/css/NavTools.css
@@ -1,65 +1,103 @@
 .gis_NavToolsDijit {
 	height: 15px;
+	padding: 0px 0px 0px 90px !important;
+}
+
+
+ 
+
+ .dbootstrap .dijitButton .dijitButtonNode, .dbootstrap .dijitDropDownButton .dijitButtonNode, .dbootstrap .dijitComboButton .dijitButtonNode, .dbootstrap .dijitToggleButton .dijitButtonNode, .dbootstrap .dijitComboBox .dijitButtonNode, .dbootstrap .dijitSpinnerButtonContainer.dijitButtonNode, .dbootstrap .dijitSelect .dijitButtonNode {
+    display: block;
+    padding: 3px ;
+ 
+    margin : 0px;
+    font-size: 14px;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: -moz-linear-gradient(center top , rgb(255, 255, 255) 0%, rgb(230, 230, 230) 100%);
+    color: rgb(51, 51, 51);
+    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.75);
+    background-color: rgb(230, 230, 230);
+    background-repeat: repeat-x;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(187, 187, 187) rgb(187, 187, 187) rgb(168, 168, 168);
+    -moz-border-top-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    border-image: none;
+    border-radius: 4px;
+    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.2) inset, 0px 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.dbootstrap .dijitButtonNode * {
+    vertical-align: middle;
 }
 
 .gis_NavToolsDijit .zoominIcon {
-    /*background-image: url(../images/nav_zoomin.png);
+    background-image: url(../images/nav_zoomin.png);
     width: 16px;
-    height: 16px; */
+    height: 16px;  
+    padding: 0px !important;
 }
 
  .gis_NavToolsDijit .zoomoutIcon {
-	/*background-image: url(../images/nav_zoomout.png);
+	 background-image: url(../images/nav_zoomout.png);
 	width: 16px;
-	height: 16px;*/
+	height: 16px; 
 }
 
 .gis_NavToolsDijit .zoomfullextIcon {
-	/*background-image: url(../images/nav_fullextent.png);
+	 background-image: url(../images/nav_fullextent.png);
 	width: 16px;
-	height: 16px;*/
+	height: 16px; 
 }
 
 .gis_NavToolsDijit .zoomprevIcon {
-	/*background-image: url(../images/nav_previous.png);
+	 background-image: url(../images/nav_previous.png);
 	width: 16px;
-	height: 16px;*/
+	height: 16px; 
 }
 
  .gis_NavToolsDijit .zoomnextIcon {
-	/*background-image: url(../images/nav_next.png);
+	 background-image: url(../images/nav_next.png);
 	width: 16px;
-	height: 16px;*/
+	height: 16px; 
 }
 
 .gis_NavToolsDijit .panIcon {
-	/*background-image: url(../images/nav_pan.png);
+	 background-image: url(../images/nav_pan.png);
 	width: 16px;
-	height: 16px;*/
+	height: 16px; 
 }
 
 .gis_NavToolsDijit .deactivateIcon {
-	/*background-image: url(../images/nav_decline.png);
+	 background-image: url(../images/nav_decline.png);
 	width: 16px;
-	height: 16px;*/
+	height: 16px; 
 }
 .gis_NavToolsDijit .formContainer {
     /*border: 1px solid #bbb;*/
     //width: 100%;
     position: absolute;
-    top: 15px;
+    top: 11px;
     //left: 85%;
-    width: 105px;
+    width: 217px;
     float: right;
-     padding: 2px;
+     padding: 0px;
     //margin: 70px 0px 0px 80px;
-    margin: 4px 0px 0px 75px;
+    //margin: 4px 0px 0px 75px;
+    margin-left:2px auto 2px auto;
+    //margin-right: 2px auto 2px auto;
     z-index:999;
     //background: rgb(250,250,250);
     //background: rgb(90,90,90);
     //background: rgb(141,214,249);
     //background: rgb(0,164,172);
-    background: rgb(118,154,132);
+    //background: rgb(118,154,132);
+    background:rgb(1, 109, 141);
     border:  1px solid rgb(1,109,138); 
     border-radius:  4px;
      /*
